feat: 更新php插件文档
